# voting-system-dapp

./: README.md
client/: client.py  main.py  pyproject.toml
client/contracts/: Election.abi.json
dapp/contracts/: Election.sol  Election_test.sol
dapp/contracts/artifacts/: Election.json  Election_metadata.json
dapp/tests/: Election.js  Election_test.sol
